--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@
 @import "moduleSCSS/_font.scss";
 @import "moduleSCSS/_header.scss";
 @import "moduleSCSS/_category.scss";
+@import "moduleSCSS/_aboutus.scss";
 
 
 
