--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ table {
   border-spacing: 0;
 }
 
-.category__up__filigran {
+.menu__filigran, .category__up__filigran {
   text-transform: uppercase;
   font-size: 70px;
   font-weight: 800;
@@ -328,6 +328,36 @@ html body header {
     width: 50%;
   }
 }
+.menu {
+  position: relative;
+  box-sizing: border-box;
+  width: 100%;
+  height: 140vw;
+  font-family: "Nanum Myeongjo", serif;
+}
+.menu__filigran {
+  margin: 0.4em 0 0.2em 0;
+}
+.menu__wrapTitle {
+  position: absolute;
+  left: 50%;
+  width: 100%;
+  transform: translate(-50%, -160%);
+}
+.menu__wrapTitle__title {
+  text-transform: uppercase;
+  font-size: large;
+  text-align: center;
+  margin: 0;
+}
+.menu__wrapTitle__text {
+  font-family: "Open Sans", sans-serif;
+  text-align: center;
+  font-size: 0.8rem;
+  margin: 0;
+  padding: 5px 0 0 0;
+}
+
 @media only screen and (min-width: 768px) {
   .header_p {
     margin: auto;
