--- a/moduleSCSS/_aboutus.scss
+++ b/moduleSCSS/_aboutus.scss
@@ -4,7 +4,7 @@
   position: relative;
   box-sizing: border-box;
   width: 100%;
-  height: 90vw;
+  height: 210vw;
   font-family: $font-titles;
   padding: 20px;
   &__filigran {
@@ -42,8 +42,15 @@
   }
 }
 
+@media only screen and (min-width: 768px){
+  .about{
+    height: 125vw;
+  }
+}
+
 @media only screen and (min-width: 1024px) {
   .about {
+    height: 70vw;
     &__filigran {
       @include filigranDesktop;
       margin: 0.4em 0 0.2em 0;
@@ -78,6 +85,11 @@
       margin-top: 80px;
       text-align: center;
       margin-left: 30px;
+    }
+    &_logo{
+      position: absolute;
+      left: 70%;
+      top:20%;
     }
   }
 }
