--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ table {
   border-spacing: 0;
 }
 
-.about__filigran, .menu__filigran, .category__up__filigran {
+.gallery__filigran, .about__filigran, .menu__filigran, .category__up__filigran {
   text-transform: uppercase;
   font-size: 70px;
   font-weight: 800;
@@ -385,7 +385,7 @@ html body header {
   position: relative;
   box-sizing: border-box;
   width: 100%;
-  height: 140vw;
+  height: 230vw;
   font-family: "Nanum Myeongjo", serif;
 }
 .menu__filigran {
@@ -415,7 +415,7 @@ html body header {
   position: relative;
   box-sizing: border-box;
   width: 100%;
-  height: 90vw;
+  height: 210vw;
   font-family: "Nanum Myeongjo", serif;
   padding: 20px;
 }
@@ -465,7 +465,15 @@ html body header {
   text-align: center;
 }
 
+@media only screen and (min-width: 768px) {
+  .about {
+    height: 125vw;
+  }
+}
 @media only screen and (min-width: 1024px) {
+  .about {
+    height: 70vw;
+  }
   .about__filigran {
     text-transform: uppercase;
     font-size: 170px;
@@ -523,4 +531,38 @@ html body header {
     text-align: center;
     margin-left: 30px;
   }
+  .about_logo {
+    position: absolute;
+    left: 70%;
+    top: 20%;
+  }
+}
+.gallery {
+  position: relative;
+  box-sizing: border-box;
+  width: 100%;
+  height: 230vw;
+  font-family: "Nanum Myeongjo", serif;
+}
+.gallery__filigran {
+  margin: 0.4em 0 0.2em 0;
+}
+.gallery__wrapTitle {
+  position: absolute;
+  left: 50%;
+  width: 100%;
+  transform: translate(-50%, -160%);
+}
+.gallery__wrapTitle__title {
+  text-transform: uppercase;
+  font-size: large;
+  text-align: center;
+  margin: 0;
+}
+.gallery__wrapTitle__text {
+  font-family: "Open Sans", sans-serif;
+  text-align: center;
+  font-size: 0.8rem;
+  margin: 0;
+  padding: 5px 0 0 0;
 }/*# sourceMappingURL=style.css.map */
