--- a/style.scss
+++ b/style.scss
@@ -3,9 +3,9 @@
 @import "moduleSCSS/_font.scss";
 @import "moduleSCSS/_header.scss";
 @import "moduleSCSS/_category.scss";
-
 @import "moduleSCSS/_menu.scss"; 
 @import "moduleSCSS/_aboutus.scss";
+@import "moduleSCSS/_gallery.scss";
 
 
 
