--- a/moduleSCSS/_gallery.scss
+++ b/moduleSCSS/_gallery.scss
@@ -4,7 +4,6 @@
   width: 100%;
   height:230vw;
   font-family: $font-titles;
-
   &__filigran{
       @extend %filigran;
       margin:0.4em 0 0.2em 0;
@@ -12,5 +11,29 @@
   
     &__wrapTitle{
       @include wrapTitle(-160%);
+    }
+    .gallery_image{
+      &_food1{
+        img{
+          width: 480px;
+          vertical-align: bottom;
+        }
+      }
+      &_food2{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        img{
+          width: 240px;
+          height: 270px;
+        }
+      }
+    }
+    .more_infos{
+      text-align: center;
+      margin: auto;
+      text-transform: capitalize;
+      margin: 5px 150px 5px 150px;
+      padding: 5px;
+      border: 1px solid $color-black;
     }
 }
