--- a/style.css
+++ b/style.css
@@ -202,7 +202,6 @@ html body header {
 }
 .category {
   position: relative;
-  box-sizing: border-box;
   width: 100%;
   height: 125vw;
   font-family: "Nanum Myeongjo", serif;
@@ -383,14 +382,21 @@ html body header {
 }
 .menu {
   position: relative;
-  box-sizing: border-box;
+  z-index: 0;
   width: 100%;
-  height: 230vw;
+  height: 170vw;
+  padding: 20px;
   font-family: "Nanum Myeongjo", serif;
+  background-position: 0% 80%;
+  background-color: rgba(250, 237, 210, 0.5);
+  background-repeat: no-repeat;
+  background-position: left bottom;
 }
+
 .menu__filigran {
   margin: 0.4em 0 0.2em 0;
 }
+
 .menu__wrapTitle {
   position: absolute;
   left: 50%;
@@ -409,6 +415,53 @@ html body header {
   font-size: 0.8rem;
   margin: 0;
   padding: 5px 0 0 0;
+}
+
+.menu__wrapItems {
+  position: relative;
+  z-index: 2;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(8, 1fr);
+  width: 70vw;
+  margin: 50px auto;
+  gap: 15px;
+}
+.menu__wrapItems__item {
+  border: dashed 2px white;
+  border-radius: 4px;
+  background-color: #fff;
+  padding: 10px 15px;
+  display: grid;
+  grid-template-columns: 6fr 1fr;
+  grid-template-rows: 20px 20px;
+  grid-template-areas: "title price" "description price";
+}
+.menu__wrapItems__item:hover {
+  border: dashed 2px #C8A969;
+}
+.menu__wrapItems__item__title {
+  grid-area: title;
+  font-family: "Nanum Myeongjo", serif;
+}
+.menu__wrapItems__item__description {
+  grid-area: description;
+  font-family: "Open Sans", sans-serif;
+  font-size: 12px;
+}
+.menu__wrapItems__item__price {
+  grid-area: price;
+  color: #C8A969;
+  font-size: 25px;
+  line-height: 40px;
+}
+
+.menu__img {
+  position: absolute;
+  display: block;
+  top: 45vw;
+  margin-left: -70px;
+  z-index: 1;
 }
 
 .about {
@@ -545,6 +598,8 @@ html body header {
   font-family: "Nanum Myeongjo", serif;
 }
 .gallery__filigran {
+  position: relative;
+  z-index: -2;
   margin: 0.4em 0 0.2em 0;
 }
 .gallery__wrapTitle {
