--- a/style.scss
+++ b/style.scss
@@ -6,7 +6,7 @@
 @import "moduleSCSS/_menu.scss"; 
 @import "moduleSCSS/_aboutus.scss";
 @import "moduleSCSS/_gallery.scss";
-@import "moduleSCSS/_chefs.scss"
+@import "moduleSCSS/_chefs.scss";
 
 
 
