--- a/moduleSCSS/_blog.scss
+++ b/moduleSCSS/_blog.scss
@@ -4,6 +4,10 @@
   width: 100%;
   height:230vw;
   font-family: $font-titles;
+  &_news1{
+    background-color:lighten($color: gray, $amount: 35);
+    padding-top: 10px;
+  }
   &__filigran{
       position:relative;
       z-index:-2;
@@ -32,7 +36,7 @@
     }
   }
   p{
-    margin:10px;
+    padding:10px;
     text-align: center;
   }
 }
