--- a/moduleSCSS/_blog.scss
+++ b/moduleSCSS/_blog.scss
@@ -4,10 +4,20 @@
   width: 100%;
   height:230vw;
   font-family: $font-titles;
-  &_news1{
-    background-color:lighten($color: gray, $amount: 35);
+
+  &_brand{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
     padding-top: 10px;
-  }
+    img{
+      width: 50px;
+      height: 50px;
+    }
+    }
+  &_news1{
+    padding-top: 10px;
+    }
   &__filigran{
       position:relative;
       z-index:-2;
@@ -30,6 +40,8 @@
       justify-content: space-between;
       align-content: space-between;
       margin: 20px;
+      text-transform: uppercase;
+      font-size: medium;
       i{
         color:$color-darkgold;
       }
