--- a/style.css
+++ b/style.css
@@ -649,8 +649,17 @@ html body header {
   height: 230vw;
   font-family: "Nanum Myeongjo", serif;
 }
+.blog_brand {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding-top: 10px;
+}
+.blog_brand img {
+  width: 50px;
+  height: 50px;
+}
 .blog_news1 {
-  background-color: #d9d9d9;
   padding-top: 10px;
 }
 .blog__filigran {
@@ -691,6 +700,8 @@ html body header {
   justify-content: space-between;
   align-content: space-between;
   margin: 20px;
+  text-transform: uppercase;
+  font-size: medium;
 }
 .blog_ww h6 i {
   color: #C8A969;
