--- a/moduleSCSS/_menu.scss
+++ b/moduleSCSS/_menu.scss
@@ -71,3 +71,18 @@
     z-index: 1;
     
 }
+
+@media only screen and (min-width: 1024px) {
+    .menu{
+        height: 88vw;
+        &__filigran{
+            @include filigranDesktop;
+            margin:0.4em 0 0.2em 0;
+        }
+      
+        &__wrapTitle{
+            @include wrapTitleDesktop(-220%);
+        }
+    }
+
+}
