--- a/moduleSCSS/_gallery.scss
+++ b/moduleSCSS/_gallery.scss
@@ -2,7 +2,7 @@
   position:relative;
   box-sizing: border-box;
   width: 100%;
-  height:280vw;
+  height:265vw;
   font-family: $font-titles;
   &__filigran{
       position:relative;
@@ -44,7 +44,9 @@
       text-transform: capitalize;
       margin: 5px 150px 5px 150px;
       padding: 5px;
-      border: 1px solid $color-black;
+      // border: 1px solid $color-black;
+      text-transform: uppercase;
+      width: 220px;
     }
 }
 
