--- a/style.css
+++ b/style.css
@@ -628,7 +628,7 @@ html body header {
   position: relative;
   box-sizing: border-box;
   width: 100%;
-  height: 280vw;
+  height: 265vw;
   font-family: "Nanum Myeongjo", serif;
 }
 .gallery__filigran {
@@ -681,7 +681,8 @@ html body header {
   text-transform: capitalize;
   margin: 5px 150px 5px 150px;
   padding: 5px;
-  border: 1px solid black;
+  text-transform: uppercase;
+  width: 220px;
 }
 
 .chefs {
@@ -761,7 +762,7 @@ html body header {
   position: absolute;
   left: 50%;
   width: 100%;
-  transform: translate(-50%, -160%);
+  transform: translate(-50%, -110%);
 }
 .blog__wrapTitle__title {
   text-transform: uppercase;
@@ -838,6 +839,9 @@ html body header {
   font-weight: bold;
   font-family: "Nanum Myeongjo", serif;
   font-size: 20px;
+}
+.footer__nav__list i {
+  color: #C8A969;
 }
 .footer__nav__item {
   padding: 5px 0;
