Adapt menu desktop WIP

--- a/moduleSCSS/_menu.scss
+++ b/moduleSCSS/_menu.scss
@@ -86,3 +86,51 @@
     }
 
 }
+
+@media only screen and (min-width: 1024px) {
+    .menu{ 
+        height:50vw;
+    }
+    .menu__wrapItems {
+        position:relative;
+        z-index: 2;
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(4,1fr);
+        width:70vw;
+        margin:50px auto;
+        gap: 15px;
+        &__item {
+            border:dashed 4px white;
+            border-radius: 8px;
+            background-color: #fff;
+            padding: 10px 15px;
+            display: grid;
+            grid-template-columns: 6fr 1fr;
+            grid-template-rows: 40px 40px;
+            
+            grid-template-areas: 
+            "title price"
+            "description price";
+            &:hover{
+                border:dashed 4px $color-darkgold;
+            }
+            &__title{
+                grid-area: title;
+                font-size:34px;
+                font-family: $font-titles;
+            }
+            &__description {
+                grid-area: description;
+                font-family: $font-p;
+                font-size:20px;
+            }
+            &__price {
+                grid-area: price;
+                color: $color-darkgold;
+                font-size: 40px ;
+                line-height: 40px;
+            }
+        }
+    }
+}
